fix top page margin on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -235,7 +235,7 @@ h1 {
 }
 @media screen and (max-width: 900px) {
   .hero-section {
-    margin-top: 100px;
+    /* margin-top: 100px; */
   }
   .pt-5 {
     padding-top: 0rem !important;
